[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "bmrs"
author = "Edison Abahurire"
author-email = "abahedison@gmail.com"
home-page = "https://github.com/SimiCode/bmrs-json-api"
requires=[
"docopt >=0.6.2",
"stomp.py >=4.1.22",
"xmltodict >=0.12.0"
]
requires-python=">=3.6"
description-file="README.md"
classifiers=[
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Topic :: Software Development :: Libraries :: Python Modules",
]